# minimal-cplex-example

./: CMakeLists.txt
src/: main.cpp
